<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/blanco"
    android:gravity="center"
    tools:context=".actividades.EditarPerfilActivity">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/baseline_person_24"
        android:contentDescription="@string/imagen_de_perfil"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_usuario"
        android:textColorHint="@color/gris"
        android:backgroundTint="@color/gris"
        android:inputType="text"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:textColorHint="@color/gris"

        android:backgroundTint="@color/gris"

        android:inputType="text"
        android:layout_marginBottom="16dp"/>





    <Button
        android:id="@+id/botonActualizarPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:textSize="18sp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/blanco"
        android:backgroundTint="@color/verde_oscuro_2"
        android:layout_gravity="center" />

</LinearLayout>