<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blanco"
    tools:context=".fragmentos.crearlugar.FormularioCrearLugarFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paso_1"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:textSize="21sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/gray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".actividades.CrearLugarActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nombre_layout"
                style="@style/til_form">

                <EditText
                    android:id="@+id/nombre_lugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gris"

                    android:background="@drawable/fondo_forms"
                    android:hint="@string/txt_nombre_lugar"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descripcion_layout"
                style="@style/til_form">

                <EditText
                    android:id="@+id/descripcion_lugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:lines="8"
                    android:textColor="@color/gris"
                    android:background="@drawable/fondo_forms"
                    android:hint="@string/txt_descripcion_lugar"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/direccion_layout"
                style="@style/til_form">

                <EditText
                    android:id="@+id/direccion_lugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gris"
                    android:background="@drawable/fondo_forms"
                    android:hint="@string/btn_direccion_lugar"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/ciudad_lugar"
                style="@style/spinner_form"
                />

            <Spinner
                android:id="@+id/categoria_lugar"
                style="@style/spinner_form" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/telefono_layout"
                style="@style/til_form">

                <EditText
                    android:id="@+id/telefono_lugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@color/gris"
                    android:background="@drawable/fondo_forms"
                    android:hint="@string/txt_telefono_lugar"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gris"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"/>

            <TextView
                android:id="@+id/txt_imagen"
                style="@style/til_form"
                android:textSize="18sp"
                android:text="Selección de imagen"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="35dp"
                android:weightSum="100"
                android:gravity="center"
                android:layout_marginStart="35dp">

            <Button
                android:id="@+id/btn_sel_archivo"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="60dp"
                android:textColor="@color/blanco"
                android:backgroundTint="@color/verde_oscuro"
                android:layout_marginEnd="10dp"
                android:text="Seleccionar archivo"/>

            <Button
                android:id="@+id/btn_tomar_foto"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="60dp"
                android:textColor="@color/blanco"
                android:backgroundTint="@color/verde_oscuro"
                android:text="Tomar foto"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/imagenes_sel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>